# find-my-bike-app

./: Dockerfile  Procfile  entrypoint.sh  requirements.txt
.github/workflows/: porter_slight_goes_possible.yml
alembic/: env.py
alembic/versions/: 1b431e5dbe7c_switch_date_to_datetime.py  9d5436e150d7_add_corrections_table.py  a7458c86b406_rename_img_url_field.py  b691ebcc3675_set_on_delete_cascade_for_corrections.py  cdb2c66a128b_add_query_and_date_fields.py
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: af7bd847240f_init_database.py
backend/app/: api.py  models.py  security.py  validation.py
backend/tests/: test_models.py  test_validation.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.jsx  utils.jsx
frontend/src/@types/: posting.d.ts
frontend/src/components/: AspectSelects.jsx  BackToTopButton.jsx  Contexts.jsx  FeedbackButtons.jsx  Header.jsx  Header.tsx  Posting.jsx  Posting.tsx  Prediction.jsx  SearchBar.jsx
