[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tilman Krokotsch <t.krokotsch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.6"
psycopg2 = "^2.9.3"
databases = "^0.5.5"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
